# gobi-guardian

./: AGENTS.md  demo-p0.html  demo-p1.html  demo-p2.html  demo-p3.html  demo-p4.html  demo-p5.html  demo-p6.html  demo-p7.html  dl_bili.py  dl_bili2.py  fix_p7_dl.py  index.html  index_gbk.html  landscape.js  live_p5.html  make_poster.py  p2.js  test_bili.py  作品介绍-策划书.md
.github/workflows/: pages.yml
assets/: bgm.m4s  p2-route.json  p4-close.txt  p4-open.txt  p4-sub-0.txt  p4-sub-1.txt  p4-sub-3.txt  p5-intro-0.txt  p5-intro-1.txt  p5-intro-2.txt  p5-result.txt  p6-timeline.txt  只争朝夕.jfif  向斗争中学习.jfif  排除万难去争取胜利.jfif  毛主席万岁.jfif
douyin-scraper/: 启动爬虫.bat
gemini-bridge/: .dockerignore  .gitignore  README.md  SECURITY.md  mise.toml
gemini-bridge/examples/: zed.jsonc
gemini-bridge/extension/: popup.html
src/: main.js
src/core/: AudioManager.js  SceneManager.js
原版/: FULL-DESIGN.md  P4-DESIGN.md  PROJECT_INTRO.md  demo-p0.html  demo-p1.html  demo-p2.html  demo-p3.html  demo-p4.html  demo-p5.html  demo-p6.html  demo-p7.html  index.html  p2.js
新版/: demo-p4.html  demo-p5.html  p2.js  server.js
新版/gemini-bridge/server/: config.ini.example  pyproject.toml
新版/gemini-bridge/server/src/app/: config.py
新版/gemini-bridge/server/src/app/endpoints/: auth.py  runtime.py
新版/gemini-bridge/server/src/app/services/: bootstrap.py
新版/gemini-bridge/server/tests/: test_account_discovery.py  test_compression.py  test_models.py  test_runtime.py  test_wrapper_init_timeout.py
最终作品/: demo-p2.html  demo-p4.html  demo-p5.html  demo-p6.html  demo-p7.html  index.html
(+70 files in other folders)
