[project]
name = "gemini-bridge"
version = "0.0.0"
description = "OpenAI-compatible API on top of gemini.google.com."
authors = [
    { name = "Boris Lord", email = "106592312+BorisLord@users.noreply.github.com" },
]
license = { text = "MIT" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "litestar>=2.18.0,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "curl-cffi>=0.15.0,<0.16.0",
    "gemini-webapi>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.46.0,<0.50.0",
    "tomli>=2.2.1",
    "pillow>=12.2.0,<13.0.0",
]
